--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.3",
     "expo": "~46.0.16",
+    "expo-cli": "^6.0.6",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -18,7 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@types/react": "17.0.21",
     "@types/react-native": "~0.69.1",
     "typescript": "~4.3.5"
   },
