--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-cli": "^6.0.6",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
