--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@expo/webpack-config": "^0.17.3",
     "@react-native-async-storage/async-storage": "1.17.3",
     "@react-native-community/netinfo": "8.2.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-cli": "^6.0.6",
+    "expo-linear-gradient": "^11.4.0",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
@@ -25,6 +27,7 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^13.5.0",
     "react-native-web": "~0.18.7",
     "react-query": "3.39.1"
   },
