--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "expo-linear-gradient": "^11.4.0",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.20",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^13.5.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
     "react-query": "3.39.1"
   },
