--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-svg": "^13.5.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "^11.23.1",
     "react-query": "3.39.1"
   },
   "devDependencies": {
